Fixes #133 fix horizontal scroll in our works slider section

--- a/src/sass/components/our_works.sass
+++ b/src/sass/components/our_works.sass
@@ -1,6 +1,7 @@
 .our-works
     &__wrapper
         position: relative
+        overflow-x: hidden
     &__slider
         background: transparent
         overflow: hidden
@@ -61,7 +62,7 @@
                 @media all and (max-width: 500px)
                     right: unset
 
-        .slick-list 
+        .slick-list
             margin: 0 -10px
 
         .slick-center
@@ -73,10 +74,3 @@
                 right: 25px
                 bottom: 15px
                 transition: all .8s
-
-    
-
-            
-             
-
-
